--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div
-			class="min-h-screen relative overflow-hidden bg-gradient-to-br from-sky-400 to-blue-600 dark:from-sky-900 dark:to-zinc-900">
+			class="min-h-screen relative overflow-hidden bg-gradient-to-br from-indigo-400 to-blue-600 dark:from-indigo-900 dark:to-zinc-900">
 			<div class="max-w-xl py-2 px-2 mx-auto" id="root"></div>
 		</div>
 		<script type="module" src="/src/main.tsx"></script>
